--- a/index.htm
+++ b/index.htm
@@ -183,7 +183,7 @@
         <tr>
           <td>Flappy Rocket</td>
           <td><select size="1" id="Flappy-lvl" name="Flappy-lvl" onclick="FlappySelect();TripleFlappy();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="704"> 1 </option>
           <option value ="768"> 2 </option>
           <option value ="819"> 3 </option>
@@ -195,13 +195,13 @@
           <option value ="1140"> 9 </option>
           <option value ="1200"> 10 </option>
           </select></td>
-           <td><input type="text" name="FlappyPoints" id="FlappyPoints" value=0"></td>
+           <td><input type="text" name="FlappyPoints" id="FlappyPoints" value="0"></td>
            <td><input type="text" name="TripleFlappy" id="TripleFlappy" value="0"></td>
         </tr>
         <tr>
         <td>Cryptonoid</td>
         <td><select size="1" id="Cryptonoid-lvl" name="Cryptonoid-lvl" onclick="CryptonoidSelect();TripleCryptonoid();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="912"> 1 </option>
           <option value ="936"> 2 </option>
           <option value ="984"> 3 </option>
@@ -219,7 +219,7 @@
         <tr>
         <td>Coin-Match</td>
         <td><select size="1" id="Match-lvl" name="Match-lvl" onclick="MatchSelect();TripleMatch();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="720"> 1 </option>
           <option value ="793"> 2 </option>
           <option value ="806"> 3 </option>
@@ -237,7 +237,7 @@
         <tr>
         <td>Crypto Hamster</td>
         <td><select size="1" id="Crypto-lvl" name="Crypto-lvl" onclick="CryptoSelect();TripleCrypto();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="900"> 1 </option>
           <option value ="959"> 2 </option>
           <option value ="1021"> 3 </option>
@@ -255,7 +255,7 @@
         <tr>
         <td>2048 Coins</td>
         <td><select size="1" id="TwentyFourtyEight-lvl" name="TwentyFourtyEight-lvl" onclick="TwentyFourtyEightSelect();TripleTwentyFourtyEight();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="800"> 1 </option>
           <option value ="850"> 2 </option>
           <option value ="900"> 3 </option>
@@ -273,7 +273,7 @@
         <tr>
         <td>Coin-Flip</td>
         <td><select size="1" id="Flip-lvl" name="Flip-lvl" onclick="FlipSelect();TripleFlip();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="900"> 1 </option>
           <option value ="912"> 2 </option>
           <option value ="912"> 3 </option>
@@ -291,7 +291,7 @@
         <tr>
         <td>Dr. Hamster</td>
         <td><select size="1" id="Dr-lvl" name="Dr-lvl" onclick="DrSelect();TripleDr();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="896"> 1 </option>
           <option value ="981"> 2 </option>
           <option value ="1059"> 3 </option>
@@ -309,7 +309,7 @@
         <tr>
         <td>Token Surfer</td>
         <td><select size="1" id="Surfer-lvl" name="Surfer-lvl" onclick="SurferSelect();TripleSurfer();">
-          <option value ="Points"> Lvls </option>
+          <option value ="0"> Lvls </option>
           <option value="840"> 1 </option>
           <option value ="910"> 2 </option>
           <option value ="980"> 3 </option>
