--- a/index.htm
+++ b/index.htm
@@ -108,10 +108,10 @@
         if (isNaN(document.getElementById("TripleCrypto").value)) document.getElementById("TripleCrypto").value = 0; 
       }
       
-      function TripleTwentyFourtyEighty()
+      function TripleTwentyFourtyEight()
       { 
-       document.getElementById("TripleTwentyFourtyEighty").value = 3*document.getElementById("TwentyFourtyEighty-lvl").value
-        if (isNaN(document.getElementById("TripleTwentyFourtyEighty").value)) document.getElementById("TripleTwentyFourtyEighty").value = 0; 
+       document.getElementById("TripleTwentyFourtyEight").value = 3*document.getElementById("TwentyFourtyEight-lvl").value
+        if (isNaN(document.getElementById("TripleTwentyFourtyEight").value)) document.getElementById("TripleTwentyFourtyEight").value = 0; 
       }
       
       function TripleFlip()
