--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,9 @@
       }
       
       select option {
-      background-color: #228B22;
+      background-color: #FFD700;
       font-weight: bold;
-      color: red;
+      color: black;
 }
       
     </style>
