--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
     <title>RollerCoin Calculator</title>
     <style>
         table, th, td {
-        border: 1px solid black;
+        border: 2px;
+        border-color:#FFD700;
         border-collapse: collapse;
         }
       #table {
