--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
     <style>
         table, th, td {
         border: 2px;
+        border-style: solid;
         border-color:#FFD700;
         border-collapse: collapse;
         }
