--- a/index.htm
+++ b/index.htm
@@ -6,15 +6,15 @@
         table, th, td {
         border: 2px;
         border-style: solid;
-        border-color:#FFD700;
+        border-color:#40E0D0;
         border-collapse: collapse;
         }
       #table {
-      background-color:#228B22
+      background-color:#90EE90
       }
       
       select option {
-      background-color: #FFD700;
+      background-color: #40E0D0;
       font-weight: bold;
       color: black;
 }
