--- a/index.htm
+++ b/index.htm
@@ -330,7 +330,7 @@
           <option value="840"> 1 </option>
           <option value ="910"> 2 </option>
           <option value ="980"> 3 </option>
-          <option value ="Unknown"> 4 </option>
+          <option value ="1050"> 4 </option>
           <option value ="Unknown"> 5 </option>
           <option value ="Unknown"> 6 </option>
           <option value ="Unknown"> 7 </option>
