--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,9 @@
         border-collapse: collapse;
         }
       #table {
-      background-color:#90EE90
+      background-color:#90EE90;
+      table-layout: auto;
+      width: 100%;  
       }
       
       select option {
@@ -152,7 +154,7 @@
     </script>
   </head>
   <body>
-    <table id="table" class="display" style="width:100%">
+    <table id="table" class="display">
       <thead>
       <tr>
         <th> </th>
