--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,9 @@
         border-color:#40E0D0;
         border-collapse: collapse;
         }
+      td {
+      align:center; 
+      }
       #table {
       background-color:#90EE90;
       table-layout: auto;
