--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
         border-collapse: collapse;
         }
       td {
-      align:center; 
+      text-align: center; 
       }
       #table {
       background-color:#90EE90;
