--- a/index.htm
+++ b/index.htm
@@ -8,10 +8,9 @@
         border-style: solid;
         border-color:#40E0D0;
         border-collapse: collapse;
+        text-align: center;
         }
-      td {
-      text-align: center; 
-      }
+     
       #table {
       background-color:#90EE90;
       table-layout: auto;
@@ -160,10 +159,10 @@
     <table id="table" class="display">
       <thead>
       <tr>
-        <th> </th>
-        <th align="left">Select Lvl</th>
-        <th align="left">Points Per Win</th>
-        <th align="left">Lvl Conquered</th>
+        <th>RollerCoin Games</th>
+        <th>Select Lvl</th>
+        <th>Points Per Win</th>
+        <th>Lvl Conquered</th>
       </tr>
       </thead>
       <tbody>
