--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,10 @@
       font-weight: bold;
       color: black;
       width: 100%;
+        
+      input {
+      font-weight:bold;  
+      }
 }
       
     </style>
