--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>RollerCoin Calculator</title>
-    <style>
+    <style type="text/css">
         table, th, td {
         border: 2px;
         border-style: solid;
