--- a/index.htm
+++ b/index.htm
@@ -171,7 +171,7 @@
       </thead>
       <tbody>
         <tr>
-        <td>Coinclick</td>
+        <td><img src="https://user-images.githubusercontent.com/79811052/109886725-c7b04780-7c3d-11eb-8d1e-608052320cb1.png" alt="Coinclick" width="150" height="100"></td>
         <td><select size="1" id="Coinclick-lvl" name="Coinclick-lvl" onclick="CoinSelect();TripleCoin();">
           <option value ="0"> Lvls </option>
           <option value ="600"> 1 </option>
