--- a/index.htm
+++ b/index.htm
@@ -158,6 +158,8 @@
         if (isNaN(document.getElementById("TripleSurfer").value)) document.getElementById("TripleSurfer").value = 0; 
       }
     </script>
+    
+    <a href="https://marsh0333.github.io/RollerCoin/Page2/">Look at Page 2</a>
   </head>
   <body>
     <table id="table" class="display">
