--- a/index.htm
+++ b/index.htm
@@ -159,7 +159,7 @@
       }
     </script>
     
-    <a href="https://marsh0333.github.io/RollerCoin/Page2/">Look at Page 2</a>
+    <a href="https://marsh0333.github.io/RollerCoin/Page2">Look at Page 2</a>
   </head>
   <body>
     <table id="table" class="display">
