--- a/Page2.html
+++ b/Page2.html
@@ -1,7 +1,37 @@
+---
+layout: default
+
+---
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Page 2</title>
+    
+    <style type="text/css">
+      .button {
+      display: inline-block;
+      padding: 15px 25px;
+      font-size: 24px;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      outline: none;
+      color: #fff;
+      background-color: #4CAF50;
+      border: none;
+      border-radius: 15px;
+      box-shadow: 0 9px #999;
+      }
+
+      .button:hover {background-color: #3e8e41}
+
+      .button:active {
+      background-color: #3e8e41;
+      box-shadow: 0 5px #666;
+      transform: translateY(4px);
+      }
+    </style>
 </head>
   <body>
     <a href="https://marsh0333.github.io/RollerCoin"><button class="button">Home</button></a>
