--- a/Page2.html
+++ b/Page2.html
@@ -39,6 +39,10 @@ layout: default
     <br>
 Testing Website
   
+    
+    
+    <img src="https://user-images.githubusercontent.com/79811052/110174682-b42bea80-7dbd-11eb-84f5-dce4450861fb.png" alt="Value Comparison">
+    <img src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison">
   </body>
   
   </html>
