--- a/Page2.html
+++ b/Page2.html
@@ -41,8 +41,8 @@ Testing Website
   
     
     
-    <img src="https://user-images.githubusercontent.com/79811052/110174682-b42bea80-7dbd-11eb-84f5-dce4450861fb.png" alt="Value Comparison">
-    <img src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison">
+    <img src="https://user-images.githubusercontent.com/79811052/110174682-b42bea80-7dbd-11eb-84f5-dce4450861fb.png" alt="Value Comparison" width="700" height="200">
+    <img src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" width="700" height="200">
   </body>
   
   </html>
