--- a/Page2.html
+++ b/Page2.html
@@ -40,8 +40,12 @@ layout: default
 Testing Website
   
     
-    
+    <h2 style="color:DarkGreen">Would you rather get the best bang for your buck?</h2>
     <img src="https://user-images.githubusercontent.com/79811052/110174682-b42bea80-7dbd-11eb-84f5-dce4450861fb.png" alt="Value Comparison" width="900" height="200">
+    <br>
+    <h1 style="color:Black">OR....</h1>
+    <br>
+    <h2 style="color:DarkGreen">Would you rather earn the quickest buck?</h2>
     <img src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" width="900" height="200">
   </body>
   
