Update and rename Page2.html to Comparisons.html

--- a/Comparisons.html
+++ b/Comparisons.html
@@ -6,7 +6,7 @@ layout: default
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page 2</title>
+    <title>Comparisons</title>
     
     <style type="text/css">
       .button {
@@ -37,7 +37,7 @@ layout: default
     <a href="https://marsh0333.github.io/RollerCoin"><button class="button">Home</button></a>
     <br>
     <br>
-Testing Website
+
   
     
     <h2 style="color:DarkGreen">Would you rather get the best bang for your buck?</h2>
