--- a/index.htm
+++ b/index.htm
@@ -187,7 +187,7 @@ layout: default
     
   </head>
   <body>
-    <a href="https://marsh0333.github.io/RollerCoin/Page2"><button class="button">Look at Page 2</button></a>
+    <a href="https://marsh0333.github.io/RollerCoin/Comparisons"><button class="button">Comparisons</button></a>
     <br>
     <br>
     
