--- a/Comparisons.html
+++ b/Comparisons.html
@@ -12,15 +12,15 @@ layout: default
       
       /* Brightness-zoom Container */
       .brightness-img img {
-      transition: transform 2s, filter 1.5s ease-in-out;
+      transition-duration: 1s;
       transform-origin: center center;
       filter: brightness(100%);
       }
  
       /* The Transformation */
       .brightness-img:hover img {
-      filter: brightness(150%);
-      transform: scale(1.3);
+      filter: brightness(110%);
+      transform: scale(1.5);
       }
       
       .button {
