--- a/Comparisons.html
+++ b/Comparisons.html
@@ -180,7 +180,7 @@ span.onclick = function() {
     <br>
      
     <h2 style="color:DarkGreen">Would you rather earn the quickest buck?</h2>
-    <img id="myImg" src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" style="width:100%;max-width:300px">
+    <img id="myImg" src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" style="width:900;height:200">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -188,7 +188,8 @@ span.onclick = function() {
   <img class="modal-content" id="img01">
   <div id="caption"></div>
 </div>
-   // <img src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" width="900" height="200">
+   /* <img src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" width="900" height="200">
+  */
   </body>
   
   </html>
