--- a/Comparisons.html
+++ b/Comparisons.html
@@ -157,7 +157,7 @@ layout: default
     <br>
      
     <h2 style="color:DarkGreen">Would you rather earn the quickest buck?</h2>
-    <img id="myImg" src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" style="width:900;height:200">
+    <img id="myImg" src="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png" alt="Speed Comparison" width="900" height="200">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
