--- a/Comparisons.html
+++ b/Comparisons.html
@@ -14,6 +14,7 @@ layout: default
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
+  filter: brightness(100%);
 }
 
 #myImg:hover {opacity: 0.7;}
