--- a/Comparisons.html
+++ b/Comparisons.html
@@ -71,5 +71,11 @@ layout: default
     </div>
   </body>
   
+  <footer>
+    <a href="https://user-images.githubusercontent.com/79811052/110174682-b42bea80-7dbd-11eb-84f5-dce4450861fb.png">Value Comparison</a>
+    <a href="https://user-images.githubusercontent.com/79811052/110174723-c60d8d80-7dbd-11eb-8b66-cbb9cb426f33.png">Speed Comparison</a>  
+    
+  </footer>  
+  
   </html>
   
