--- a/Comparisons.html
+++ b/Comparisons.html
@@ -52,6 +52,7 @@ layout: default
 </head>
   <body>
     <a href="https://marsh0333.github.io/RollerCoin"><button class="button">Home</button></a>
+    <a href="https://marsh0333.github.io/RollerCoin/Strategy"><button class="button">Strategy</button></a>
     <br>
     <br>
 
