--- a/index.htm
+++ b/index.htm
@@ -188,6 +188,7 @@ layout: default
   </head>
   <body>
     <a href="https://marsh0333.github.io/RollerCoin/Comparisons"><button class="button">Comparisons</button></a>
+    <a href="https://marsh0333.github.io/RollerCoin/Strategy"><button class="button">Strategy</button></a>
     <br>
     <br>
     
